# ac-pulse

./: .env.example  .gitignore  README.md  main.py  requirements.txt  spark.json
ac-pulse/: .env.example  .gitignore  BUILD_PROMPT.md  CLAUDE.md  PRODUCT_BRIEF.md  README.md  fly.toml  pyproject.toml  ruff.toml
ac-pulse/app/: account_mapping.py  account_materialization.py  actions.py  alerts.py  audit.py  config.py  logging_setup.py  lookup_service.py  main.py  models.py  portfolio.py  pulse.py  snapshot.py  snowflake_client.py  transformer.py  zapier_client.py
ac-pulse/app/ac_client/: account_resolver.py  api.py  field_bootstrap.py  field_writer.py
ac-pulse/app/extractors/: __init__.py  acai.py  base.py  churn.py  nbn.py  renewal.py  touchpoints.py  utilization.py
ac-pulse/app/workers/: heartbeat.py  monthly.py  nightly.py  on_demand.py  pipeline.py  settings.py  weekly_snapshot.py
ac-pulse/sql/extractors/: acai.sql  churn.sql  nbn.sql  renewal.sql  touchpoints.sql  utilization.sql
ac-pulse/sql/lookups/: customer_footprint.sql
ac-pulse/sql/migrations/: 001_create_cs_analytics_schema.sql  002_account_state_weekly.sql  003_ac_pulse_audit_log.sql
ac-pulse/sql/portfolio/: success_rep_book.sql
ac-pulse/tests/: conftest.py  test_ac_api.py  test_account_mapping.py  test_account_materialization.py  test_account_resolver.py  test_actions.py  test_extractors.py  test_field_bootstrap.py  test_field_writer.py  test_heartbeat.py  test_lookup_service.py  test_main.py  test_portfolio.py  test_pulse.py  test_snowflake_client.py  test_transformer.py  test_workers.py
(+3 files in other folders)
